# macrocosmo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  prompt.md  todo.md
docs/: lua-api.md  (+30 more)
macrocosmo/: Cargo.toml
macrocosmo-ai/: Cargo.toml
macrocosmo-ai/src/: agent.rs  ai_params.rs  assessment.rs  campaign.rs  command.rs  condition.rs  decomposition.rs  dispatcher.rs  eval.rs  evidence.rs  feasibility.rs  ids.rs  intent.rs  lib.rs  long_term_default.rs  mid_term_default.rs  mock.rs  nash.rs  objective.rs  orchestrator.rs  precondition.rs  precondition_cache.rs  projection.rs  proposal.rs  retention.rs  short_term_default.rs  spec.rs  standing.rs  time.rs  value_expr.rs  victory.rs  warning.rs
macrocosmo-ai/src/bus/: command.rs  evidence.rs  metric.rs  mod.rs  snapshot.rs
macrocosmo-ai/src/playthrough/: agent_scenario.rs  assertions.rs  mod.rs  record.rs  recorder.rs  replayer.rs  scenario.rs
macrocosmo-ai/src/projection/: confidence.rs  emit.rs  fit.rs  mod.rs  model.rs  project_fn.rs  window.rs
macrocosmo-ai/tests/: ai_core_isolation.rs  assessment_smoke.rs  bus_behavior.rs  campaign_sm.rs  feasibility_eval.rs  pipeline_e2e.rs  playthrough_assertions.rs  playthrough_roundtrip.rs  precondition_eval.rs  projection_basic.rs  projection_windows.rs  proposal_types.rs  scenario_adversarial_zero_sum.rs  scenario_ai_driven_growth.rs  scenario_compound_win.rs  scenario_economic_growth.rs  scenario_expiry_adaptation.rs  scenario_intent_competition.rs  scenario_mid_terminal_awareness.rs  scenario_multi_faction.rs  scenario_preemptive_preserve.rs  scenario_priority_weighted.rs  scenario_projection_window.rs  scenario_pursuit_tradeoff.rs  scenario_survival_under_threat.rs  scenario_victory_unreachable.rs  three_layer_consistency.rs
macrocosmo-core/: Cargo.toml
macrocosmo-core/src/: amount.rs  condition.rs  display.rs  effect.rs  expr.rs  lib.rs  lua.rs  modification.rs  modified_value.rs  modifier_scope.rs  parsed_modifier.rs
macrocosmo-ui-dsl/: Cargo.toml
macrocosmo-ui-dsl/examples/: catalogue.lua  ui_dsl_catalogue.rs  ui_dsl_inspect.rs  ui_dsl_render_smoke.rs
macrocosmo-ui-dsl/src/: lib.rs  lua.rs  render.rs  runtime.rs
macrocosmo/assets/shaders/: territory.wgsl
macrocosmo/logs/: world_state.jsonl
macrocosmo/scripts/: init.lua
macrocosmo/scripts/biomes/: init.lua  types.lua
macrocosmo/scripts/buildings/: basic.lua  init.lua
macrocosmo/scripts/config/: balance.lua
macrocosmo/scripts/events/: sample.lua
macrocosmo/scripts/examples/: on_command_completed.lua
macrocosmo/scripts/factions/: casus_belli.lua  faction_types.lua  init.lua  negotiation_items.lua  options.lua
macrocosmo/scripts/galaxy/: map_types.lua
macrocosmo/scripts/jobs/: basic.lua  init.lua
macrocosmo/scripts/knowledge/: sample.lua
macrocosmo/scripts/lib/: capital.lua
macrocosmo/scripts/notifications/: default_bridge.lua
macrocosmo/scripts/planets/: init.lua  types.lua
macrocosmo/scripts/regions/: dark_nebula.lua  init.lua  subspace_storm.lua
macrocosmo/scripts/ships/: core_hulls.lua  designs.lua  hulls.lua  init.lua  modules.lua  slot_types.lua  station_hulls.lua  station_modules.lua
macrocosmo/scripts/species/: human.lua  init.lua
macrocosmo/scripts/stars/: init.lua  types.lua
macrocosmo/scripts/structures/: cores.lua  definitions.lua  init.lua
macrocosmo/scripts/tech/: branches.lua  industrial.lua  init.lua  military.lua  social.lua
macrocosmo/scripts/ui/: init.lua
macrocosmo/src/: amount.rs  casus_belli.rs  choice.rs  components.rs  condition.rs  effect.rs  event_system.rs  events.rs  game_state.rs  interactions.rs  lib.rs  main.rs  modifier.rs  negotiation.rs  notifications.rs  profiling.rs  reflect_registration.rs  remote.rs  ship_design.rs  simulation.rs  species.rs
macrocosmo/src/ai/: assignments.rs  combat_projection.rs  command_consumer.rs  command_outbox.rs  command_params.rs  command_route.rs  convert.rs  debug_log.rs  decomposition_rules.rs  emit.rs  emitters.rs  mid_adapter.rs  mid_agent.rs  mid_stance.rs  mod.rs  npc_decision.rs  orchestrator_runtime.rs  plugin.rs  schema.rs  short_adapter.rs  short_agent.rs  short_agent_runtime.rs  short_stance.rs  threat_query.rs
macrocosmo/src/colony/: authority.rs  build_tick.rs  building_queue.rs  colonization.rs  maintenance.rs  mod.rs  population.rs  production.rs  remote.rs  system_buildings.rs
macrocosmo/src/communication/: mod.rs
macrocosmo/src/deep_space/: mod.rs
macrocosmo/src/empire/: comms.rs  mod.rs
macrocosmo/src/faction/: mod.rs
macrocosmo/src/galaxy/: biome.rs  generation.rs  mod.rs  region.rs  types.rs
macrocosmo/src/input/: config.rs  mod.rs
macrocosmo/src/interactions/: esc_notifications.rs  observer_controls.rs  player_controls.rs  time_controls.rs
macrocosmo/src/knowledge/: facts.rs  kind_registry.rs  mod.rs  payload.rs  perceived.rs  ship_view.rs
macrocosmo/src/observer/: cli.rs  exit.rs  mod.rs
macrocosmo/src/persistence/: load.rs  mod.rs  remap.rs  rng_serde.rs  save.rs  savebag.rs
macrocosmo/src/physics/: mod.rs
macrocosmo/src/player/: mod.rs
macrocosmo/src/region/: mod.rs
macrocosmo/tests/: ai_colonize_requires_core.rs  ai_command_lightspeed.rs  ai_debug_smoke.rs  ai_decomposition_e2e.rs  ai_deliverable_registry_resolution.rs  ai_foreign_slots.rs  ai_integration.rs  ai_layered_parity.rs  ai_npc_avoid_hostile_systems.rs  ai_npc_no_double_survey_assignment.rs  ai_npc_outbox_dedup.rs  ai_per_region_npc_smoke.rs  ai_player_e2e.rs  ai_policy_mode_gate.rs  ai_rank_survey_targets_eta.rs  ai_region_deadlock_hotfix.rs  ai_resource_gate_hotfix.rs  ai_resource_gate_region_scope.rs  ai_ship_build_queue.rs  ai_ship_overdue.rs  ai_short_agent_per_region_routing.rs  ai_visualization_extrapolation_hotfix.rs  build_ui_gates.rs  building_built_hooks.rs  capital_lib.rs  casus_belli.rs  choice.rs  colonization_shipyard.rs  colony.rs  colony_hub.rs  colony_view_owner.rs  combat.rs  combat_scenarios.rs  combat_sim_analysis.rs  conquered_core.rs  context_menu_ftl_leak.rs  context_menu_local_remote_gate.rs  core_auto_spawn.rs  deliverable_pipeline.rs  diplomatic_options.rs  (+82 more)
(+285 files in other folders)
