[package]
name = "macrocosmo-ai"
version.workspace = true
edition.workspace = true
description = "Engine-agnostic AI core for macrocosmo: typed topic bus, feasibility, campaigns."

[features]
default = []
mock = []

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2"
log = "0.4"

[dev-dependencies]
# Self-reference with `mock` feature activates the mock module for
# integration tests in `tests/` without forcing the feature on consumers.
macrocosmo-ai = { path = ".", features = ["mock"] }
