[package]
name = "macrocosmo-ai"
version.workspace = true
edition.workspace = true
description = "Engine-agnostic AI core for macrocosmo: typed topic bus, feasibility, campaigns."

[features]
default = []
mock = []
playthrough = ["dep:serde_json"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
log = "0.4"

[dev-dependencies]
# Self-reference with `mock` and `playthrough` features activates the
# optional modules for integration tests in `tests/` without forcing the
# features on consumers.
macrocosmo-ai = { path = ".", features = ["mock", "playthrough"] }
