[package]
name = "macrocosmo"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
mlua = { version = "0.11", features = ["luajit", "vendored", "send"] }
rand = "0.9"
rand_xoshiro = { version = "0.7", features = ["serde"] }
serde_json = "1"
serde.workspace = true
postcard.workspace = true
macrocosmo-ai = { path = "../macrocosmo-ai", features = ["playthrough"] }
